<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorbg"
        tools:context=".ui.welcome.WelcomeActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="8dp"
                android:src="@mipmap/ic_launcher_round"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="6dp"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/purple_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />
            <androidx.appcompat.widget.AppCompatTextView
                android:textAllCaps="false"
                android:id="@+id/txttagline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:padding="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:textSize="11sp"
                android:text="@string/tagline"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/purple_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <androidx.appcompat.widget.AppCompatTextView

                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/the_official_app"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/purple_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txttagline"


                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnsignup"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/buttonstyle"
                android:gravity="center"
                android:text="@string/create_Account"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnlogin" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnlogin"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/buttonstyle"
                android:gravity="center"
                android:text="@string/Login"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:visibility="invisible"
                android:id="@+id/btnskip"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/skip"
                android:textAllCaps="false"
                android:textColor="@color/purple_200"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="169dp"
                android:background="@drawable/edtborderblue"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btnsignup"
                app:layout_constraintHorizontal_bias="0.444"
                app:layout_constraintStart_toStartOf="@+id/btnsignup"
                app:layout_constraintTop_toBottomOf="@+id/btnsignup">

                <Spinner

                    android:id="@+id/languageSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"

                    android:foregroundTint="@color/blue"
                    android:foregroundTintMode="add"
                    android:paddingStart="5dp"
                    android:paddingLeft="5dp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>