<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbg">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:fillViewport="true"
        tools:context=".ui.activity.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView9"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="52dp"
                android:layout_marginBottom="65dp"
                android:src="@mipmap/ic_launcher_round"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp"
                app:civ_circle_background_color="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/llll"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.52"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher_round"
                tools:ignore="VectorDrawableCompat" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/llll"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="16dp"
                app:boxStrokeWidth="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="16dp"
                    android:hint="@string/reg_Mobile"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxEms="10"
                    android:maxLength="10"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"
                    android:text="9813078155"
                    tools:ignore="TouchTargetSizeCheck">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/kkkk"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llll"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/lock"
                    android:drawableLeft="@drawable/lock"
                    android:drawablePadding="16dp"
                    android:hint="@string/password"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"
                    android:text="12345678"
                    tools:ignore="TouchTargetSizeCheck">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView

                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:id="@+id/txtforget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:gravity="end"
                android:text="@string/forgot_passwordd"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/button2"
                app:layout_constraintEnd_toEndOf="@+id/kkkk"
                app:layout_constraintHorizontal_bias="0.953"
                app:layout_constraintStart_toStartOf="@+id/kkkk"
                app:layout_constraintTop_toBottomOf="@+id/kkkk" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/edtbg"
                android:gravity="center"
                android:text="@string/login"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/textView9"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtforget" />
            <TextView
                android:visibility="gone"
                android:id="@+id/button2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/create_account"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="@+id/button"
                app:layout_constraintHorizontal_bias="0.441"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="@+id/button"
                app:layout_constraintTop_toBottomOf="@+id/button" />

            <androidx.appcompat.widget.AppCompatTextView
                android:visibility="invisible"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:id="@+id/btnskip"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/skip"
                android:textAllCaps="false"
                android:textColor="@color/blue"
               />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>


